feat: implement exceptions
